Added imported files to object tree display and program info dialog navigation